test/neg/float-literal.msmt_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


; Horn Constraints
(constraint (forall ((v2 Obj a_aZU)) (=> True (>= v2 1.00000))))
